trab/2/parser.output
Terminais sem uso na gramática

    IMPORT
    ASSERT
    TRY
    EXCEPT
    FINALLY
    RAISE
    EXEC
    LBRACE
    RBRACE


Gramática

    0 $accept: file_input $end

    1 file_input: fk_NEWLINE_stmt ENDMARKER

    2 fk_NEWLINE_stmt: %empty
    3                | NL_stmt fk_NEWLINE_stmt

    4 NL_stmt: NEWLINE
    5        | stmt

    6 funcdef: DEF NAME parameters opc_RARROW_test COLON func_body_suite

    7 opc_RARROW_test: %empty
    8                | RARROW test

    9 parameters: LPAR opc_argslist RPAR

   10 opc_argslist: %empty
   11             | NAME COMMA opc_argslist
   12             | NAME

   13 stmt: simple_stmt
   14     | compound_stmt

   15 simple_stmt: small_stmt fk_SEMI_small_stmt opc_SEMI NEWLINE

   16 fk_SEMI_small_stmt: %empty
   17                   | SEMI small_stmt fk_NEWLINE_stmt

   18 small_stmt: expr_stmt
   19           | del_stmt
   20           | pass_stmt
   21           | flow_stmt
   22           | global_stmt
   23           | nonlocal_stmt

   24 expr_stmt: testlist_star_expr expr_stmt_1

   25 expr_stmt_1: annassign
   26            | augassign expr_stmt_2
   27            | opc_fk_EQ_YE_TSE_TC

   28 expr_stmt_2: yield_expr
   29            | testlist

   30 opc_fk_EQ_YE_TSE_TC: %empty
   31                    | expr_stmt_3 fk_EQ_YE_TSE

   32 fk_EQ_YE_TSE: %empty
   33             | expr_stmt_3 fk_EQ_YE_TSE

   34 expr_stmt_3: EQUAL expr_stmt_4

   35 expr_stmt_4: yield_expr
   36            | testlist_star_expr

   37 annassign: COLON test opc_COLON_test

   38 testlist_star_expr: TSE_stmt fk_COMMA_T_SE opc_COMMA

   39 TSE_stmt: test
   40         | star_expr

   41 fk_COMMA_T_SE: %empty
   42              | COMMA TSE_stmt fk_COMMA_T_SE

   43 augassign: PLUSEQUAL
   44          | MINEQUAL
   45          | STAREQUAL
   46          | ATEQUAL
   47          | SLASHEQUAL
   48          | PERCENTEQUAL
   49          | AMPEREQUAL
   50          | VBAREQUAL
   51          | CIRCUMFLEXEQUAL
   52          | LEFTSHIFTEQUAL
   53          | RIGHTSHIFTEQUAL
   54          | DOUBLESTAREQUAL
   55          | DOUBLESLASHEQUAL

   56 opc_SEMI: %empty
   57         | SEMI

   58 opc_COLON_test: %empty
   59               | EQUAL yield_expr
   60               | EQUAL testlist_star_expr

   61 opc_COMMA: %empty
   62          | COMMA

   63 del_stmt: DEL exprlist

   64 pass_stmt: PASS

   65 flow_stmt: break_stmt
   66          | continue_stmt
   67          | return_stmt
   68          | yield_stmt

   69 break_stmt: BREAK

   70 continue_stmt: CONTINUE

   71 return_stmt: RETURN opc_testlist_star_expr

   72 yield_stmt: yield_expr

   73 opc_testlist_star_expr: %empty
   74                       | testlist_star_expr

   75 global_stmt: GLOBAL NAME fk_COMMA_NAME

   76 nonlocal_stmt: NONLOCAL NAME fk_COMMA_NAME

   77 fk_COMMA_NAME: %empty
   78              | COMMA NAME fk_COMMA_NAME

   79 compound_stmt: if_stmt
   80              | while_stmt
   81              | for_stmt
   82              | with_stmt
   83              | funcdef
   84              | classdef

   85 if_stmt: IF namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE opc_ELSE_COLON_suite

   86 fk_ELIF_NT_COLON_SUITE: %empty
   87                       | ELSE_IF namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE

   88 while_stmt: WHILE namedexpr_test COLON suite opc_ELSE_COLON_suite

   89 for_stmt: FOR exprlist IN testlist COLON suite opc_ELSE_COLON_suite

   90 opc_ELSE_COLON_suite: %empty
   91                     | ELSE COLON suite

   92 with_stmt: WITH with_item fk_COMMA_WI COLON suite

   93 fk_COMMA_WI: %empty
   94            | COMMA with_item fk_COMMA_WI

   95 with_item: test opc_AS_expr

   96 opc_AS_expr: %empty
   97            | AS expr

   98 suite: simple_stmt
   99      | NEWLINE INDENT stmt fk_stmt DEDENT

  100 namedexpr_test: test opc_COLONEQUAL_test

  101 opc_COLONEQUAL_test: %empty
  102                    | COLONEQUAL test

  103 test: or_test opc_IF_or_test_ELSE_test
  104     | lambdef

  105 opc_IF_or_test_ELSE_test: %empty
  106                         | IF or_test ELSE test

  107 test_nocond: or_test
  108            | lambdef_nocond

  109 lambdef: LAMBDA opc_argslist COLON test

  110 lambdef_nocond: LAMBDA opc_argslist COLON test_nocond

  111 or_test: and_test fk_OR_AT

  112 fk_OR_AT: %empty
  113         | OR and_test fk_OR_AT

  114 and_test: not_test fk_AND_NT

  115 fk_AND_NT: %empty
  116          | AND not_test fk_AND_NT

  117 not_test: NOT not_test
  118         | comparison

  119 comparison: expr fk_CO_EXPR

  120 fk_CO_EXPR: %empty
  121           | comp_op expr fk_CO_EXPR

  122 comp_op: LESS
  123        | GREATER
  124        | EQEQUAL
  125        | GREATEREQUAL
  126        | LESSEQUAL
  127        | LESSGREATER
  128        | NOTEQUAL
  129        | IN
  130        | NOT IN
  131        | IS
  132        | IS NOT

  133 star_expr: STAR expr

  134 expr: xor_expr fk_VBAR_XE

  135 fk_VBAR_XE: %empty
  136           | VBAR xor_expr fk_VBAR_XE

  137 xor_expr: and_expr fk_CIRCUMFLEX_EXPR

  138 fk_CIRCUMFLEX_EXPR: %empty
  139                   | CIRCUMFLEX and_expr fk_CIRCUMFLEX_EXPR

  140 and_expr: shift_expr fk_AMPER_SE

  141 fk_AMPER_SE: %empty
  142            | AMPER shift_expr fk_AMPER_SE

  143 shift_expr: arith_expr fk_LS_RS_AE

  144 fk_LS_RS_AE: %empty
  145            | SE_stmt arith_expr fk_LS_RS_AE

  146 SE_stmt: LEFTSHIFT
  147        | RIGHTSHIFT

  148 arith_expr: term fk_T_PLUS_MINUS

  149 fk_T_PLUS_MINUS: %empty
  150                | AE_stmt term fk_T_PLUS_MINUS

  151 AE_stmt: PLUS
  152        | MINUS

  153 term: factor fk_MATH

  154 fk_MATH: %empty
  155        | term_stmt factor fk_MATH

  156 term_stmt: STAR
  157          | AT
  158          | SLASH
  159          | PERCENT
  160          | DOUBLESLASH

  161 factor: factor_stmt factor
  162       | power

  163 factor_stmt: PLUS
  164            | MINUS
  165            | TILDE

  166 power: atom_expr opc_DOUBLESTAR_factor

  167 opc_DOUBLESTAR_factor: %empty
  168                      | DOUBLESTAR factor

  169 atom_expr: atom fk_trailer
  170          | AWAIT atom fk_trailer

  171 fk_trailer: %empty
  172           | trailer fk_trailer

  173 atom: LPAR opc_atom_stmt RPAR
  174     | LSQB opc_testlist_comp RSQB
  175     | NAME
  176     | NUMBER
  177     | STRING fk_STRING
  178     | ELLIPSIS
  179     | NONE
  180     | TRUE
  181     | FALSE

  182 opc_atom_stmt: %empty
  183              | yield_expr
  184              | testlist_comp

  185 opc_testlist_comp: %empty
  186                  | testlist_comp

  187 fk_STRING: %empty
  188          | STRING fk_STRING

  189 testlist_comp: trailer_stmt trailer_stmt_1

  190 trailer: LPAR opc_arglist RPAR
  191        | LSQB subscriptlist RSQB
  192        | DOT NAME

  193 opc_arglist: %empty
  194            | arglist

  195 fk_COMMA_NT_SE: %empty
  196               | COMMA trailer_stmt fk_COMMA_NT_SE

  197 trailer_stmt: namedexpr_test
  198             | star_expr

  199 trailer_stmt_1: comp_for
  200               | fk_COMMA_NT_SE opc_COMMA

  201 subscriptlist: subscript fk_COMMA_S opc_COMMA

  202 fk_COMMA_S: %empty
  203           | COMMA subscript fk_COMMA_S

  204 subscript: test
  205          | opc_test COLON opc_test opc_sliceop

  206 opc_test: %empty
  207         | test

  208 opc_sliceop: %empty
  209            | sliceop

  210 sliceop: COLON opc_test

  211 exprlist: exprlist_stmt fk_COMMA_E_SE opc_COMMA

  212 fk_COMMA_E_SE: %empty
  213              | COMMA exprlist_stmt fk_COMMA_E_SE

  214 exprlist_stmt: expr
  215              | star_expr

  216 testlist: test fk_COMMA_test opc_COMMA

  217 fk_COMMA_test: %empty
  218              | COMMA test fk_COMMA_test

  219 classdef: CLASS NAME opc_LPAR_arglist_RPAR COLON suite

  220 opc_LPAR_arglist_RPAR: %empty
  221                      | LPAR RPAR
  222                      | LPAR arglist RPAR

  223 arglist: argument fk_COMMA_A opc_COMMA

  224 fk_COMMA_A: %empty
  225           | COMMA argument fk_COMMA_A

  226 argument: test opc_comp_for
  227         | test COLONEQUAL test
  228         | test EQUAL test
  229         | DOUBLESTAR test
  230         | STAR test

  231 opc_comp_for: %empty
  232             | comp_for

  233 comp_iter: comp_for
  234          | comp_if

  235 sync_comp_for: FOR exprlist IN or_test opc_comp_iter

  236 opc_comp_iter: %empty
  237              | comp_iter

  238 comp_for: opc_ASYNC sync_comp_for

  239 opc_ASYNC: %empty
  240          | ASYNC

  241 comp_if: IF test_nocond opc_comp_iter

  242 yield_expr: YIELD opc_yield_arg

  243 opc_yield_arg: %empty
  244              | yield_arg

  245 yield_arg: FROM test
  246          | testlist_star_expr

  247 func_body_suite: simple_stmt
  248                | NEWLINE INDENT stmt fk_stmt DEDENT

  249 fk_stmt: %empty
  250        | stmt fk_stmt


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    IMPORT (258)
    FROM (259) 245
    AS (260) 97
    CLASS (261) 219
    DEF (262) 6
    LAMBDA (263) 109 110
    NOT (264) 117 130 132
    AND (265) 116
    OR (266) 113
    IF (267) 85 106 241
    ELSE_IF (268) 87
    ELSE (269) 91 106
    IS (270) 131 132
    TRUE (271) 180
    FALSE (272) 181
    ASSERT (273)
    FOR (274) 89 235
    IN (275) 89 129 130 235
    WHILE (276) 88
    PASS (277) 64
    BREAK (278) 69
    CONTINUE (279) 70
    TRY (280)
    EXCEPT (281)
    FINALLY (282)
    WITH (283) 92
    RETURN (284) 71
    RAISE (285)
    YIELD (286) 242
    GLOBAL (287) 75
    NONLOCAL (288) 76
    NONE (289) 179
    DEL (290) 63
    EXEC (291)
    ASYNC (292) 240
    AWAIT (293) 170
    NAME (294) 6 11 12 75 76 78 175 192 219
    NUMBER (295) 176
    STRING (296) 177 188
    INDENT (297) 99 248
    DEDENT (298) 99 248
    NEWLINE (299) 4 15 99 248
    LPAR (300) 9 173 190 221 222
    RPAR (301) 9 173 190 221 222
    LSQB (302) 174 191
    RSQB (303) 174 191
    COLON (304) 6 37 85 87 88 89 91 92 109 110 205 210 219
    COMMA (305) 11 42 62 78 94 196 203 213 218 225
    SEMI (306) 17 57
    PLUS (307) 151 163
    MINUS (308) 152 164
    STAR (309) 133 156 230
    SLASH (310) 158
    VBAR (311) 136
    AMPER (312) 142
    LESS (313) 122
    GREATER (314) 123
    LESSGREATER (315) 127
    EQUAL (316) 34 59 60 228
    DOT (317) 192
    PERCENT (318) 159
    LBRACE (319)
    RBRACE (320)
    EQEQUAL (321) 124
    NOTEQUAL (322) 128
    LESSEQUAL (323) 126
    GREATEREQUAL (324) 125
    TILDE (325) 165
    CIRCUMFLEX (326) 139
    LEFTSHIFT (327) 146
    RIGHTSHIFT (328) 147
    DOUBLESTAR (329) 168 229
    PLUSEQUAL (330) 43
    MINEQUAL (331) 44
    STAREQUAL (332) 45
    SLASHEQUAL (333) 47
    PERCENTEQUAL (334) 48
    AMPEREQUAL (335) 49
    VBAREQUAL (336) 50
    CIRCUMFLEXEQUAL (337) 51
    LEFTSHIFTEQUAL (338) 52
    RIGHTSHIFTEQUAL (339) 53
    DOUBLESTAREQUAL (340) 54
    DOUBLESLASH (341) 160
    DOUBLESLASHEQUAL (342) 55
    AT (343) 157
    ATEQUAL (344) 46
    RARROW (345) 8
    ELLIPSIS (346) 178
    COLONEQUAL (347) 102 227
    ENDMARKER (348) 1
    LOW (349)


Não terminais com as regras onde eles aparecem

    $accept (95)
        à esquerda: 0
    file_input (96)
        à esquerda: 1
        à direita: 0
    fk_NEWLINE_stmt (97)
        à esquerda: 2 3
        à direita: 1 3 17
    NL_stmt (98)
        à esquerda: 4 5
        à direita: 3
    funcdef (99)
        à esquerda: 6
        à direita: 83
    opc_RARROW_test (100)
        à esquerda: 7 8
        à direita: 6
    parameters (101)
        à esquerda: 9
        à direita: 6
    opc_argslist (102)
        à esquerda: 10 11 12
        à direita: 9 11 109 110
    stmt (103)
        à esquerda: 13 14
        à direita: 5 99 248 250
    simple_stmt (104)
        à esquerda: 15
        à direita: 13 98 247
    fk_SEMI_small_stmt (105)
        à esquerda: 16 17
        à direita: 15
    small_stmt (106)
        à esquerda: 18 19 20 21 22 23
        à direita: 15 17
    expr_stmt (107)
        à esquerda: 24
        à direita: 18
    expr_stmt_1 (108)
        à esquerda: 25 26 27
        à direita: 24
    expr_stmt_2 (109)
        à esquerda: 28 29
        à direita: 26
    opc_fk_EQ_YE_TSE_TC (110)
        à esquerda: 30 31
        à direita: 27
    fk_EQ_YE_TSE (111)
        à esquerda: 32 33
        à direita: 31 33
    expr_stmt_3 (112)
        à esquerda: 34
        à direita: 31 33
    expr_stmt_4 (113)
        à esquerda: 35 36
        à direita: 34
    annassign (114)
        à esquerda: 37
        à direita: 25
    testlist_star_expr (115)
        à esquerda: 38
        à direita: 24 36 60 74 246
    TSE_stmt (116)
        à esquerda: 39 40
        à direita: 38 42
    fk_COMMA_T_SE (117)
        à esquerda: 41 42
        à direita: 38 42
    augassign (118)
        à esquerda: 43 44 45 46 47 48 49 50 51 52 53 54 55
        à direita: 26
    opc_SEMI (119)
        à esquerda: 56 57
        à direita: 15
    opc_COLON_test (120)
        à esquerda: 58 59 60
        à direita: 37
    opc_COMMA (121)
        à esquerda: 61 62
        à direita: 38 200 201 211 216 223
    del_stmt (122)
        à esquerda: 63
        à direita: 19
    pass_stmt (123)
        à esquerda: 64
        à direita: 20
    flow_stmt (124)
        à esquerda: 65 66 67 68
        à direita: 21
    break_stmt (125)
        à esquerda: 69
        à direita: 65
    continue_stmt (126)
        à esquerda: 70
        à direita: 66
    return_stmt (127)
        à esquerda: 71
        à direita: 67
    yield_stmt (128)
        à esquerda: 72
        à direita: 68
    opc_testlist_star_expr (129)
        à esquerda: 73 74
        à direita: 71
    global_stmt (130)
        à esquerda: 75
        à direita: 22
    nonlocal_stmt (131)
        à esquerda: 76
        à direita: 23
    fk_COMMA_NAME (132)
        à esquerda: 77 78
        à direita: 75 76 78
    compound_stmt (133)
        à esquerda: 79 80 81 82 83 84
        à direita: 14
    if_stmt (134)
        à esquerda: 85
        à direita: 79
    fk_ELIF_NT_COLON_SUITE (135)
        à esquerda: 86 87
        à direita: 85 87
    while_stmt (136)
        à esquerda: 88
        à direita: 80
    for_stmt (137)
        à esquerda: 89
        à direita: 81
    opc_ELSE_COLON_suite (138)
        à esquerda: 90 91
        à direita: 85 88 89
    with_stmt (139)
        à esquerda: 92
        à direita: 82
    fk_COMMA_WI (140)
        à esquerda: 93 94
        à direita: 92 94
    with_item (141)
        à esquerda: 95
        à direita: 92 94
    opc_AS_expr (142)
        à esquerda: 96 97
        à direita: 95
    suite (143)
        à esquerda: 98 99
        à direita: 85 87 88 89 91 92 219
    namedexpr_test (144)
        à esquerda: 100
        à direita: 85 87 88 197
    opc_COLONEQUAL_test (145)
        à esquerda: 101 102
        à direita: 100
    test (146)
        à esquerda: 103 104
        à direita: 8 37 39 95 100 102 106 109 204 207 216 218 226 227 228 229 230 245
    opc_IF_or_test_ELSE_test (147)
        à esquerda: 105 106
        à direita: 103
    test_nocond (148)
        à esquerda: 107 108
        à direita: 110 241
    lambdef (149)
        à esquerda: 109
        à direita: 104
    lambdef_nocond (150)
        à esquerda: 110
        à direita: 108
    or_test (151)
        à esquerda: 111
        à direita: 103 106 107 235
    fk_OR_AT (152)
        à esquerda: 112 113
        à direita: 111 113
    and_test (153)
        à esquerda: 114
        à direita: 111 113
    fk_AND_NT (154)
        à esquerda: 115 116
        à direita: 114 116
    not_test (155)
        à esquerda: 117 118
        à direita: 114 116 117
    comparison (156)
        à esquerda: 119
        à direita: 118
    fk_CO_EXPR (157)
        à esquerda: 120 121
        à direita: 119 121
    comp_op (158)
        à esquerda: 122 123 124 125 126 127 128 129 130 131 132
        à direita: 121
    star_expr (159)
        à esquerda: 133
        à direita: 40 198 215
    expr (160)
        à esquerda: 134
        à direita: 97 119 121 133 214
    fk_VBAR_XE (161)
        à esquerda: 135 136
        à direita: 134 136
    xor_expr (162)
        à esquerda: 137
        à direita: 134 136
    fk_CIRCUMFLEX_EXPR (163)
        à esquerda: 138 139
        à direita: 137 139
    and_expr (164)
        à esquerda: 140
        à direita: 137 139
    fk_AMPER_SE (165)
        à esquerda: 141 142
        à direita: 140 142
    shift_expr (166)
        à esquerda: 143
        à direita: 140 142
    fk_LS_RS_AE (167)
        à esquerda: 144 145
        à direita: 143 145
    SE_stmt (168)
        à esquerda: 146 147
        à direita: 145
    arith_expr (169)
        à esquerda: 148
        à direita: 143 145
    fk_T_PLUS_MINUS (170)
        à esquerda: 149 150
        à direita: 148 150
    AE_stmt (171)
        à esquerda: 151 152
        à direita: 150
    term (172)
        à esquerda: 153
        à direita: 148 150
    fk_MATH (173)
        à esquerda: 154 155
        à direita: 153 155
    term_stmt (174)
        à esquerda: 156 157 158 159 160
        à direita: 155
    factor (175)
        à esquerda: 161 162
        à direita: 153 155 161 168
    factor_stmt (176)
        à esquerda: 163 164 165
        à direita: 161
    power (177)
        à esquerda: 166
        à direita: 162
    opc_DOUBLESTAR_factor (178)
        à esquerda: 167 168
        à direita: 166
    atom_expr (179)
        à esquerda: 169 170
        à direita: 166
    fk_trailer (180)
        à esquerda: 171 172
        à direita: 169 170 172
    atom (181)
        à esquerda: 173 174 175 176 177 178 179 180 181
        à direita: 169 170
    opc_atom_stmt (182)
        à esquerda: 182 183 184
        à direita: 173
    opc_testlist_comp (183)
        à esquerda: 185 186
        à direita: 174
    fk_STRING (184)
        à esquerda: 187 188
        à direita: 177 188
    testlist_comp (185)
        à esquerda: 189
        à direita: 184 186
    trailer (186)
        à esquerda: 190 191 192
        à direita: 172
    opc_arglist (187)
        à esquerda: 193 194
        à direita: 190
    fk_COMMA_NT_SE (188)
        à esquerda: 195 196
        à direita: 196 200
    trailer_stmt (189)
        à esquerda: 197 198
        à direita: 189 196
    trailer_stmt_1 (190)
        à esquerda: 199 200
        à direita: 189
    subscriptlist (191)
        à esquerda: 201
        à direita: 191
    fk_COMMA_S (192)
        à esquerda: 202 203
        à direita: 201 203
    subscript (193)
        à esquerda: 204 205
        à direita: 201 203
    opc_test (194)
        à esquerda: 206 207
        à direita: 205 210
    opc_sliceop (195)
        à esquerda: 208 209
        à direita: 205
    sliceop (196)
        à esquerda: 210
        à direita: 209
    exprlist (197)
        à esquerda: 211
        à direita: 63 89 235
    fk_COMMA_E_SE (198)
        à esquerda: 212 213
        à direita: 211 213
    exprlist_stmt (199)
        à esquerda: 214 215
        à direita: 211 213
    testlist (200)
        à esquerda: 216
        à direita: 29 89
    fk_COMMA_test (201)
        à esquerda: 217 218
        à direita: 216 218
    classdef (202)
        à esquerda: 219
        à direita: 84
    opc_LPAR_arglist_RPAR (203)
        à esquerda: 220 221 222
        à direita: 219
    arglist (204)
        à esquerda: 223
        à direita: 194 222
    fk_COMMA_A (205)
        à esquerda: 224 225
        à direita: 223 225
    argument (206)
        à esquerda: 226 227 228 229 230
        à direita: 223 225
    opc_comp_for (207)
        à esquerda: 231 232
        à direita: 226
    comp_iter (208)
        à esquerda: 233 234
        à direita: 237
    sync_comp_for (209)
        à esquerda: 235
        à direita: 238
    opc_comp_iter (210)
        à esquerda: 236 237
        à direita: 235 241
    comp_for (211)
        à esquerda: 238
        à direita: 199 232 233
    opc_ASYNC (212)
        à esquerda: 239 240
        à direita: 238
    comp_if (213)
        à esquerda: 241
        à direita: 234
    yield_expr (214)
        à esquerda: 242
        à direita: 28 35 59 72 183
    opc_yield_arg (215)
        à esquerda: 243 244
        à direita: 242
    yield_arg (216)
        à esquerda: 245 246
        à direita: 244
    func_body_suite (217)
        à esquerda: 247 248
        à direita: 6
    fk_stmt (218)
        à esquerda: 249 250
        à direita: 99 248 250


Estado 0

    0 $accept: . file_input $end

    CLASS     deslocar, e ir ao estado 1
    DEF       deslocar, e ir ao estado 2
    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    IF        deslocar, e ir ao estado 5
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    FOR       deslocar, e ir ao estado 8
    WHILE     deslocar, e ir ao estado 9
    PASS      deslocar, e ir ao estado 10
    BREAK     deslocar, e ir ao estado 11
    CONTINUE  deslocar, e ir ao estado 12
    WITH      deslocar, e ir ao estado 13
    RETURN    deslocar, e ir ao estado 14
    YIELD     deslocar, e ir ao estado 15
    GLOBAL    deslocar, e ir ao estado 16
    NONLOCAL  deslocar, e ir ao estado 17
    NONE      deslocar, e ir ao estado 18
    DEL       deslocar, e ir ao estado 19
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    NEWLINE   deslocar, e ir ao estado 24
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    STAR      deslocar, e ir ao estado 29
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 2 (fk_NEWLINE_stmt)

    file_input          ir ao estado 32
    fk_NEWLINE_stmt     ir ao estado 33
    NL_stmt             ir ao estado 34
    funcdef             ir ao estado 35
    stmt                ir ao estado 36
    simple_stmt         ir ao estado 37
    small_stmt          ir ao estado 38
    expr_stmt           ir ao estado 39
    testlist_star_expr  ir ao estado 40
    TSE_stmt            ir ao estado 41
    del_stmt            ir ao estado 42
    pass_stmt           ir ao estado 43
    flow_stmt           ir ao estado 44
    break_stmt          ir ao estado 45
    continue_stmt       ir ao estado 46
    return_stmt         ir ao estado 47
    yield_stmt          ir ao estado 48
    global_stmt         ir ao estado 49
    nonlocal_stmt       ir ao estado 50
    compound_stmt       ir ao estado 51
    if_stmt             ir ao estado 52
    while_stmt          ir ao estado 53
    for_stmt            ir ao estado 54
    with_stmt           ir ao estado 55
    test                ir ao estado 56
    lambdef             ir ao estado 57
    or_test             ir ao estado 58
    and_test            ir ao estado 59
    not_test            ir ao estado 60
    comparison          ir ao estado 61
    star_expr           ir ao estado 62
    expr                ir ao estado 63
    xor_expr            ir ao estado 64
    and_expr            ir ao estado 65
    shift_expr          ir ao estado 66
    arith_expr          ir ao estado 67
    term                ir ao estado 68
    factor              ir ao estado 69
    factor_stmt         ir ao estado 70
    power               ir ao estado 71
    atom_expr           ir ao estado 72
    atom                ir ao estado 73
    classdef            ir ao estado 74
    yield_expr          ir ao estado 75


Estado 1

  219 classdef: CLASS . NAME opc_LPAR_arglist_RPAR COLON suite

    NAME  deslocar, e ir ao estado 76


Estado 2

    6 funcdef: DEF . NAME parameters opc_RARROW_test COLON func_body_suite

    NAME  deslocar, e ir ao estado 77


Estado 3

  109 lambdef: LAMBDA . opc_argslist COLON test

    NAME  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 10 (opc_argslist)

    opc_argslist  ir ao estado 79


Estado 4

  117 not_test: NOT . not_test

    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    not_test     ir ao estado 80
    comparison   ir ao estado 61
    expr         ir ao estado 63
    xor_expr     ir ao estado 64
    and_expr     ir ao estado 65
    shift_expr   ir ao estado 66
    arith_expr   ir ao estado 67
    term         ir ao estado 68
    factor       ir ao estado 69
    factor_stmt  ir ao estado 70
    power        ir ao estado 71
    atom_expr    ir ao estado 72
    atom         ir ao estado 73


Estado 5

   85 if_stmt: IF . namedexpr_test COLON suite fk_ELIF_NT_COLON_SUITE opc_ELSE_COLON_suite

    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    namedexpr_test  ir ao estado 81
    test            ir ao estado 82
    lambdef         ir ao estado 57
    or_test         ir ao estado 58
    and_test        ir ao estado 59
    not_test        ir ao estado 60
    comparison      ir ao estado 61
    expr            ir ao estado 63
    xor_expr        ir ao estado 64
    and_expr        ir ao estado 65
    shift_expr      ir ao estado 66
    arith_expr      ir ao estado 67
    term            ir ao estado 68
    factor          ir ao estado 69
    factor_stmt     ir ao estado 70
    power           ir ao estado 71
    atom_expr       ir ao estado 72
    atom            ir ao estado 73


Estado 6

  180 atom: TRUE .

    $padrão  reduzir usando a regra 180 (atom)


Estado 7

  181 atom: FALSE .

    $padrão  reduzir usando a regra 181 (atom)


Estado 8

   89 for_stmt: FOR . exprlist IN testlist COLON suite opc_ELSE_COLON_suite

    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    STAR      deslocar, e ir ao estado 29
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    star_expr      ir ao estado 83
    expr           ir ao estado 84
    xor_expr       ir ao estado 64
    and_expr       ir ao estado 65
    shift_expr     ir ao estado 66
    arith_expr     ir ao estado 67
    term           ir ao estado 68
    factor         ir ao estado 69
    factor_stmt    ir ao estado 70
    power          ir ao estado 71
    atom_expr      ir ao estado 72
    atom           ir ao estado 73
    exprlist       ir ao estado 85
    exprlist_stmt  ir ao estado 86


Estado 9

   88 while_stmt: WHILE . namedexpr_test COLON suite opc_ELSE_COLON_suite

    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    namedexpr_test  ir ao estado 87
    test            ir ao estado 82
    lambdef         ir ao estado 57
    or_test         ir ao estado 58
    and_test        ir ao estado 59
    not_test        ir ao estado 60
    comparison      ir ao estado 61
    expr            ir ao estado 63
    xor_expr        ir ao estado 64
    and_expr        ir ao estado 65
    shift_expr      ir ao estado 66
    arith_expr      ir ao estado 67
    term            ir ao estado 68
    factor          ir ao estado 69
    factor_stmt     ir ao estado 70
    power           ir ao estado 71
    atom_expr       ir ao estado 72
    atom            ir ao estado 73


Estado 10

   64 pass_stmt: PASS .

    $padrão  reduzir usando a regra 64 (pass_stmt)


Estado 11

   69 break_stmt: BREAK .

    $padrão  reduzir usando a regra 69 (break_stmt)


Estado 12

   70 continue_stmt: CONTINUE .

    $padrão  reduzir usando a regra 70 (continue_stmt)


Estado 13

   92 with_stmt: WITH . with_item fk_COMMA_WI COLON suite

    LAMBDA    deslocar, e ir ao estado 3
    NOT       deslocar, e ir ao estado 4
    TRUE      deslocar, e ir ao estado 6
    FALSE     deslocar, e ir ao estado 7
    NONE      deslocar, e ir ao estado 18
    AWAIT     deslocar, e ir ao estado 20
    NAME      deslocar, e ir ao estado 21
    NUMBER    deslocar, e ir ao estado 22
    STRING    deslocar, e ir ao estado 23
    LPAR      deslocar, e ir ao estado 25
    LSQB      deslocar, e ir ao estado 26
    PLUS      deslocar, e ir ao estado 27
    MINUS     deslocar, e ir ao estado 28
    TILDE     deslocar, e ir ao estado 30
    ELLIPSIS  deslocar, e ir ao estado 31

    with_item    ir ao estado 88
    test         ir ao estado 89
    lambdef      ir ao estado 57
    or_test      ir ao estado 58
    and_test     ir ao estado 59
    not_test     ir ao estado 60
    comparison   ir ao estado 61
    expr         ir ao estado 63
    xor_expr     ir ao estado 64
    and_expr     ir ao estado 65
    shift_expr   ir ao estado 66
    arith_expr   ir ao estado 67
    term         ir ao estado 68
    factor       ir ao estado 69
    factor_stmt  ir ao estado 70
    power        ir ao estado 71
    atom_expr    ir ao estado 72
    atom         ir ao estado 73


Estado 14
